<resources>
    <string name="app_name">Bons Ventos</string>
    <string name="title_form">Dados do Cliente</string>
    <string name="name_field_form_name">Nome</string>
    <string name="name_field_form_city">Cidade</string>
    <string name="name_button_form_add">Salvar Cliente</string>
    <string name="description_image_splash_screen">logo da fazenda</string>
    <string name="title_dialog_order">Insira seu pedido</string>
    <string name="name_field_dialog_order_hay">N° de fardos</string>
    <string name="delete_orders">Deletar Pedidos</string>
    <string name="create_list_orders">Gerar lista de pedidos</string>
    <string name="name_title">Fazenda</string>
    <string name="name_farm">Bons Ventos</string>
    <string name="search_customer">Buscar Clientes</string>
    <string name="total_of_hays">Total de Fardos</string>
</resources>
