<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_customer"
        android:icon="@drawable/ic_search_customer"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/search_customer">


    </item>

    <item
        android:id="@+id/menu_delete_all_orders"
        android:icon="@drawable/ic_action_delete_all_orders"
        android:title="@string/delete_orders">

    </item>


    <item
        android:id="@+id/menu_list_order"
        android:icon="@drawable/ic_action_list_orders"
        android:title="@string/create_list_orders"
        app:showAsAction="always">

    </item>
</menu>