<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SplashActivity"
    android:background="#FFFF">

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/name_title"
    app:layout_constraintStart_toStartOf="@id/image-splash_activity"
    app:layout_constraintEnd_toEndOf="@id/image-splash_activity"
    app:layout_constraintBottom_toTopOf="@+id/image-splash_activity"
    android:textSize="30sp"
    android:textColor="#000000"
    android:textAlignment="center"
    android:textStyle="bold"/>

    <ImageView
        android:id="@+id/image-splash_activity"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/logo_transparente"
        android:contentDescription="@string/description_image_splash_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_farm"
        app:layout_constraintStart_toStartOf="@id/image-splash_activity"
        app:layout_constraintEnd_toEndOf="@id/image-splash_activity"
        app:layout_constraintTop_toBottomOf="@+id/image-splash_activity"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>